# aoc-2020

cpp/: day02.cpp
deno/: day12.ts  day13.ts
haskell/: aoc2020.cabal
haskell/src/: Main.hs
haskell/src/day01/: Main.hs
haskell/src/day04/: Main.hs
haskell/src/day05/: Main.hs
haskell/src/day06/: Main.hs
haskell/src/day07/: Main.hs
haskell/src/day09/: Main.hs
haskell/src/day10/: Main.hs
rust/: Cargo.toml
rust/src/: utils.rs
