name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/djrollins/aoc-2020
license:             BSD3
license-file:        LICENSE
author:              Daniel Rollins
maintainer:          daniel@djrollins.com
copyright:           2020 Daniel Rollins
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath
