cabal-version:       2.2
name:                aoc2020
version:             0.1.0.0
homepage:            https://github.com/djrollins/aoc-2020
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Rollins
maintainer:          daniel@djrollins.com
copyright:           2020 Daniel Rollins
build-type:          Simple
extra-source-files:  README.md

common common-stanzas
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath

executable day01
  import:              common-stanzas
  hs-source-dirs:      src/day01
  main-is:             Main.hs

executable day04
  import:              common-stanzas
  hs-source-dirs:      src/day04
  main-is:             Main.hs
  build-depends:       split,
                       containers,
                       regex-pcre,
		       regex-base,
		       array

executable day05
  import:              common-stanzas
  hs-source-dirs:      src/day05
  main-is:             Main.hs
